# knowledge-mcp

./: .gitignore  Makefile  README.md  config.yaml  dev.py  pyproject.toml
.windsurf/workflows/: prd-create.md
_project/: prd.md
docs/: owasp-cheats.txt  owasp.txt
docs/owasp-cheats/: AJAX_Security_Cheat_Sheet.md  Abuse_Case_Cheat_Sheet.md  Access_Control_Cheat_Sheet.md  Authentication_Cheat_Sheet.md  Authorization_Cheat_Sheet.md  Authorization_Testing_Automation_Cheat_Sheet.md  Automotive_Security.md  Bean_Validation_Cheat_Sheet.md  Browser_Extension_Vulnerabilities_Cheat_Sheet.md  C-Based_Toolchain_Hardening_Cheat_Sheet.md  CI_CD_Security_Cheat_Sheet.md  Choosing_and_Using_Security_Questions_Cheat_Sheet.md  Clickjacking_Defense_Cheat_Sheet.md  Content_Security_Policy_Cheat_Sheet.md  Cookie_Theft_Mitigation_Cheat_Sheet.md  Credential_Stuffing_Prevention_Cheat_Sheet.md  Cross-Site_Request_Forgery_Prevention_Cheat_Sheet.md  Cross_Site_Scripting_Prevention_Cheat_Sheet.md  Cryptographic_Storage_Cheat_Sheet.md  DOM_Clobbering_Prevention_Cheat_Sheet.md  DOM_based_XSS_Prevention_Cheat_Sheet.md  Database_Security_Cheat_Sheet.md  Denial_of_Service_Cheat_Sheet.md  Deserialization_Cheat_Sheet.md  Django_REST_Framework_Cheat_Sheet.md  Django_Security_Cheat_Sheet.md  Docker_Security_Cheat_Sheet.md  DotNet_Security_Cheat_Sheet.md  Drone_Security_Cheat_Sheet.md  (+68 more)
knowledge_mcp/: cli.py  config.py  document_manager.py  documents.py  kb_manager.py  knowledgebases.py  mcp_server.py  openai.py  openai_func.py  rag.py  rag_manager.py  shell.py
tasks/: prd-alternative-document-parsing.md  tasks-prd-alternative-document-parsing.md  tasks-prd-configurable-user-prompts.md
tests/: Attack_Surface_Analysis_Cheat_Sheet.txt  test_cli.py  test_config.py  test_document_manager.py  test_documents.py  test_kb_manager.py  test_knowledgebases.py  test_mcp_server.py  test_openai_func.py  test_rag.py  test_shell.py
