[project]
name = "knowledge-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Olaf Geibig", email = "olaf.geibig@gmail.com" },
]
keywords = ["knowledge", "mcp", "cli", "search", "fastmcp", "lightrag"]

dependencies = [
    "fastmcp>=2.2.1",
    "lightrag-hku>=1.3.2",
]

[project.urls]
Homepage = "https://github.com/olafgeibig/knowledge-mcp"
Repository = "https://github.com/olafgeibig/knowledge-mcp"

[project.scripts]
knowledge-mcp = "knowledge_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
